[package]
name = "auv-netease-music"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
tracing = ["auv-media-macos/tracing"]

[dependencies]
auv-driver = { path = "../auv-driver" }
# auv-media-macos compiles on all targets (non-macOS calls return Unsupported),
# so it is a normal dependency — this lets the platform-neutral CLI reuse its
# `MediaCommand` type instead of re-declaring it.
auv-media-macos = { path = "../auv-media-macos" }
auv-view = { path = "../auv-view" }
auv-tracing = { path = "../auv-tracing", features = ["file-store"] }
auv-cli-invoke = { path = "../auv-cli-invoke" }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
futures-executor = "0.3"
futures-util = { workspace = true, features = ["io"] }
serde.workspace = true
serde_json.workspace = true
image.workspace = true
sha2.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
auv-driver-windows = { path = "../auv-driver-windows" }

[dev-dependencies]
auv-tracing = { path = "../auv-tracing", features = ["memory-store"] }

[[test]]
name = "tracing_opt_in"
required-features = ["tracing"]
