[package]
name = "auv-overlay-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
swift-bridge.workspace = true

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-bridge-build.workspace = true
