[package]
name = "auv-run"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description = "AUV operation execution and authoritative run storage"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["memory-store", "file-store"]
memory-store = []
file-store = ["dep:fs2"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk"]

[dependencies]
bytes.workspace = true
fs2 = { workspace = true, optional = true }
futures-core.workspace = true
futures-util.workspace = true
hex.workspace = true
mime.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
uuid.workspace = true
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
