[package]
name = "auv-scan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description = "Temporal scan wire contracts and frame artifacts (S line slice 1)."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
