[package]
name = "auv-scan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description = "Temporal scan wire contracts, frame artifacts, and producers (S line)."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
live-capture = []

[dependencies]
auv-driver = { path = "../auv-driver" }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile = "3"

[dev-dependencies]
serde_json.workspace = true
