[package]
name = "auv-steam"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "auv-steam"
path = "src/bin/auv-steam.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comfy-table = { version = "7", default-features = false }
serde.workspace = true
serde_json.workspace = true
steamlocate = "2.1.0"
thiserror.workspace = true
